Fix issue with autocomplete overlap

--- a/static/css/awesomplete.css
+++ b/static/css/awesomplete.css
@@ -24,6 +24,7 @@ div.awesomplete > ul {
 	padding: 0;
 	border-radius: .3em;
 	margin: .2em 0 0;
+	margin-top: 50px;
 	background: hsla(0,0%,100%,.9);
 	background: linear-gradient(to bottom right, white, hsla(0,0%,100%,.8));
 	border: 1px solid rgba(0,0,0,.3);
